openshift/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: hello-world
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  ports:
    - name: http
      targetPort: app-port
      port: 8080
  selector:
    app: hello-world
  type: ClusterIP
